rebuildd (0.3.0) UNRELEASED; urgency=low

  * Store timestamp of changed status
  * Add 'build_more_recent' option, to build only the
    more recent version of a package and set others to GIVEUP
  * Add a 'build_arch_any' to build (or not) package we want to build anywhere
    This works like another arch

 -- Julien Danjou <acid@debian.org>  Sat, 11 Aug 2007 16:15:34 +0200

rebuildd (0.2.2) unstable; urgency=low

  * Add rebuildd-job manpage
  * Actually we shouldn't add jobs if they are already in database
    If needed, status should be changed
  * Add delete to rebuildd-job
  * Add a fix option to fix database state if rebuildd crashed
  * Remove send_build_logs, not used anymore, cleaning up code
  * Do not restart on upgrade
  * Print all active thread count in logs
  * Now we handle 3 types of build failures, more clear

 -- Julien Danjou <acid@debian.org>  Sat, 11 Aug 2007 02:35:22 +0200

rebuildd (0.2.1) unstable; urgency=low

  * Add --download-only to apt-get source by default
    and put only one -q
  * If a job is building, don't allow to add it
  * Rewrite rebuildd-job stats function with SQL,
    very very very very very very very very faster
  * Add headers and footers to build logs
  * Dont't try to resend old mails, otherwise we send it
    twice sometimes.
  * Fix a bug when database is empty in rebuildd-job stats
  * Limit job searching to max_jobs to be more faster
  * Fix a bug with event/lock, which cancel all jobs at once

 -- Julien Danjou <acid@debian.org>  Tue, 07 Aug 2007 20:17:14 +0200

rebuildd (0.2.0) unstable; urgency=low

  * Upload to Debian (Closes: #432302)
  * Stock builder hostname in job table
  * Add new max_jobs config var, used to load max_jobs new jobs
    This adds a new state WAIT_LOCKED for locking jobs handled by a build.
  * Handle SIGINT like SIGTERM
  * Don't stock build_time, stock build_start and build_end
  * Move http server outside, and standalone
  * Create unit tests
  * Init scripts now use LSB