@@ -24,6 +24,7 @@ class Package(sqlobject.SQLObject):
  
     name = sqlobject.StringCol() 
     version = sqlobject.StringCol(default=None) 
+    priority = sqlobject.StringCol(default=None)
 
     @staticmethod
     def VersionCompare(a, b):
